force-app/main/default/objects/Scheme__c/fields/ACTIVE__c.field-meta.xml
<CustomField>
    <fullName>ACTIVE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>