force-app/main/default/objects/Scheme__c/fields/BUY__c.field-meta.xml
<CustomField>
    <fullName>BUY__c</fullName>
    <label>Buy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>