force-app/main/default/objects/Scheme__c/fields/DISCOUNT_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT_AMOUNT__c</fullName>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>