force-app/main/default/objects/Scheme__c/fields/DISCOUNT_PERCENTAGE__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT_PERCENTAGE__c</fullName>
    <label>Discount Percentage</label>
    <precision>14</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>