force-app/main/default/objects/Scheme__c/fields/DISCOUNT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>DISCOUNT_TYPE__c</fullName>
    <label>Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amount</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Quantity</fullName>
            </value>
            <value>
                <fullName>Cross Product Quantity</fullName>
            </value>
            <value>
                <fullName>Coupon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>