force-app/main/default/objects/Scheme__c/fields/END_DATE__c.field-meta.xml
<CustomField>
    <fullName>END_DATE__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>