force-app/main/default/objects/Scheme__c/fields/GET__c.field-meta.xml
<CustomField>
    <fullName>GET__c</fullName>
    <label>Get</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>