force-app/main/default/objects/Scheme__c/fields/Get_Product__c.field-meta.xml
<CustomField>
    <fullName>Get_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Get Product</label>
    <referenceTo>Products__c</referenceTo>
    <relationshipName>Schemes1</relationshipName>
    <type>Lookup</type>
</CustomField>