force-app/main/default/objects/Scheme__c/fields/HEADER_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>HEADER_DISCOUNT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Header Discount</label>
    <type>Checkbox</type>
</CustomField>