force-app/main/default/objects/Scheme__c/fields/IMAGE__c.field-meta.xml
<CustomField>
    <fullName>IMAGE__c</fullName>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>