force-app/main/default/objects/Scheme__c/fields/ORDER_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>ORDER_AMOUNT__c</fullName>
    <label>Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>