force-app/main/default/objects/Scheme__c/fields/SCHEME_TYPE__c.field-meta.xml
<CustomField>
    <fullName>SCHEME_TYPE__c</fullName>
    <label>Scheme Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Generic</fullName>
            </value>
            <value>
                <fullName>Specific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>