force-app/main/default/objects/Scheme__c/fields/START_DATE__c.field-meta.xml
<CustomField>
    <fullName>START_DATE__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>