force-app/main/default/objects/Scheme__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ACTIVE__c</columns>
    <columns>BUY__c</columns>
    <columns>DISCOUNT_AMOUNT__c</columns>
    <columns>DISCOUNT_PERCENTAGE__c</columns>
    <columns>DISCOUNT_TYPE__c</columns>
    <columns>END_DATE__c</columns>
    <columns>GET__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>