force-app/main/default/objects/Scheme__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>DISCOUNT_TYPE__c</columns>
    <columns>START_DATE__c</columns>
    <columns>END_DATE__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>